# trac-cron-createticket

./: .gitignore  GNUmakefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_plugin.py
trac_cron_createticket/: __init__.py
trac_cron_createticket/templates/: admin_cron_createticket.html
