[project]
name = "trac-cron-createticket"
version = "1.0.0"
description = "Trac plugin for scheduled ticket creation"
requires-python = ">=3.8,<3.13"
license = {text = "BSD"}
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"

# Dependencies
dependencies = [
    "setuptools<70",
    "Trac>=1.6",
    "croniter>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]

[project.optional-dependencies]
# Development dependencies (e.g. linting, testing)
dev = [
    "ruff>=0.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# uv specific settings can be left default

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = []

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecation warnings from Trac framework itself
    "ignore::DeprecationWarning:trac",
    # But keep warnings from our own code
    "default::DeprecationWarning:trac_cron_createticket",
]


